# latency-lens

./: .env.example  .gitignore  Cargo.toml  Dockerfile  PUBLISHING.md  README.md
benchmarks/output/: summary.md
crates/core/: Cargo.toml  README.md
crates/exporters/: Cargo.toml  README.md
crates/metrics/: Cargo.toml  README.md
crates/providers/: Cargo.toml
crates/providers/src/: anthropic.rs  google.rs  openai.rs  traits.rs
crates/wasm/: Cargo.toml  README.md
crates/wasm/src/: lib.rs
deploy/: DEPLOYMENT.md  Dockerfile.cloudrun  cloudbuild.yaml  env.prod.yaml  service.yaml  setup-iam.sh
docs/agents/: cold-start-mitigation-agent.md
npm/: .gitignore  .npmignore  QUICK_START.md  README.md  index.d.ts  package.json
npm/examples/: basic.ts
scripts/: build-wasm.sh  publish-npm.sh
src/: cli.rs  config.rs  lib.rs  main.rs  orchestrator.rs
src/adapters/: mod.rs
src/agents/: edge_function.rs  execution_graph.rs  mod.rs
src/agents/cold_start_mitigation/: agent.rs  detector.rs  mod.rs  schemas.rs
src/agents/contracts/: decision_event.rs  latency_schemas.rs  mod.rs  timing_events.rs
src/agents/latency_analysis/: agent.rs  analyzer.rs  mod.rs  telemetry.rs
src/agents/ruvector/: client.rs  error.rs  mod.rs  types.rs
src/benchmarks/: io.rs  markdown.rs  mod.rs  result.rs
src/cli/commands/: analyze.rs  benchmark.rs  cold_start.rs  compare.rs  inspect.rs  mod.rs  profile.rs  replay.rs  run.rs  serve.rs
src/consumers/: mod.rs
src/phase2/: agent_config.rs  cache.rs  mod.rs  runtime.rs  signals.rs
tests/agents/: latency_analysis_test.rs  mod.rs
