[package]
name = "llm-latency-lens-metrics"
version = "0.1.0"
edition = "2021"
authors = ["LLM DevOps Team"]
description = "Metrics collection and aggregation for LLM Latency Lens"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/llm-devops/llm-latency-lens"
repository = "https://github.com/llm-devops/llm-latency-lens"
documentation = "https://docs.rs/llm-latency-lens-metrics"
keywords = ["metrics", "statistics", "percentiles", "histogram", "performance"]
categories = ["development-tools::profiling"]

[dependencies]
llm-latency-lens-core = { version = "0.1.0", path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hdrhistogram = "7.5"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest = "1.6"
