[package]
name = "llm-latency-lens-wasm"
version = "0.1.0"
edition = "2021"
authors = ["LLM DevOps Team"]
description = "WebAssembly bindings for LLM Latency Lens"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Date/time for WASM
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

# Error handling
thiserror = "1.0"

# Core dependencies (note: providers not included for WASM compatibility)
llm-latency-lens-core = { path = "../core", default-features = false }
llm-latency-lens-metrics = { path = "../metrics" }

# Async runtime for WASM (minimal features only)
tokio = { version = "1.41", features = ["sync"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
